--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
     <div class="w-[80vw] p-[7vh] bg-white/15 shadow-xl backdrop-blur-xl rounded-lg flex justify-between items-center flex-col lg:w-[40vw] lg:h-[95%] md:h-[90%] ">
         <div class="rounded-full h-[20vw] w-[20vw] lg:w-[16vh] lg:h-[16vh] md:w-[10vw] md:h-[10vw] bg-[url(https://i.postimg.cc/Z576PVFN/pro.jpg)] bg-cover bg-center"></div>
         <h1 class="text-[white] mt-[3vh] tracking-wider text-[3vh]" style="">HIMANSHU</h1>
-        <a href="https://www.instagram.com/code__with_himanshu/"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[3vh] flex justify-between items-center text-[2vh]">
-            <i class="ri-instagram-fill flex justify-center w-[20%] text-[3vh]"></i>
-            <h3 class="w-[80%] flex justify-center tracking-wider font-light">Instagram</h3>
+        <a href="https://www.instagram.com/code__with_himanshu/"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[3vh] flex justify-center items-center text-[2vh]">
+            <i class="ri-instagram-fill flex justify-end w-[30%] text-[3vh]"></i>
+            <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Instagram</h3>
             </div></a>
-        <a href="https://www.facebook.com/profile.php?id=100093116797094"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[5vh] flex justify-between items-center text-[2vh]">
-            <i class="ri-facebook-fill flex justify-center w-[20%] text-[3vh]"></i>
-            <h3 class="w-[80%] flex justify-center tracking-wider font-light">Facebook</h3>
+        <a href="https://www.facebook.com/profile.php?id=100093116797094"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[5vh] flex justify-center items-center text-[2vh]">
+            <i class="ri-facebook-fill flex justify-end w-[30%] text-[3vh]"></i>
+            <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Facebook</h3>
         </div></a>
-        <a href="https://t.me/User_not_found110"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[5vh] flex justify-between items-center text-[2vh]">
-            <i class="ri-telegram-fill flex justify-center w-[20%] text-[3vh]"></i>
-            <h3 class="w-[80%] flex justify-center tracking-wider font-light">Telegram</h3>
+        <a href="https://t.me/User_not_found110"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[5vh] flex justify-center items-center text-[2vh]">
+            <i class="ri-telegram-fill flex justify-end w-[30%] text-[3vh]"></i>
+            <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Telegram</h3>
         </div></a>
-        <a href="https://wa.link/civ7gr"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[5vh] flex justify-between items-center text-[2vh]">
-            <i class="ri-whatsapp-fill flex justify-center w-[20%] text-[3vh]"></i>
-            <h3 class="w-[80%] flex justify-center tracking-wider font-light">Whatsapp</h3>
+        <a href="https://wa.link/civ7gr"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[5vh] flex justify-center items-center text-[2vh]">
+            <i class="ri-whatsapp-fill flex justify-end w-[30%] text-[3vh]"></i>
+            <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Whatsapp</h3>
         </div></a>
-        <a href="https://discordapp.com/users/himanshu_1101"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[5vh] flex justify-between items-center text-[2vh]">
-            <i class="ri-discord-fill flex justify-center w-[20%] text-[3vh]"></i>
-            <h3 class="w-[80%] flex justify-center tracking-wider font-light">Discord</h3>
+        <a href="https://discordapp.com/users/himanshu_1101"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[5vh] flex justify-center items-center text-[2vh]">
+            <i class="ri-discord-fill flex justify-end w-[30%] text-[3vh]"></i>
+            <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Discord</h3>
         </div></a>
     </div>
     
