profile changed to local photo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <!-- <img src="bg.jpg" class="h-[100vh] w-[100vw]"> -->
     <div class="w-[80vw] p-[7vh] bg-white/15 shadow-xl backdrop-blur-xl rounded-lg flex justify-between items-center flex-col lg:w-[40vw] lg:h-[95%] md:h-[90%] ">
-        <div class="rounded-full h-[20vw] w-[20vw] lg:w-[16vh] lg:h-[16vh] md:w-[10vw] md:h-[10vw] bg-[url(https://i.postimg.cc/Z576PVFN/pro.jpg)] bg-cover bg-center"></div>
+        <div class="rounded-full h-[20vw] w-[20vw] lg:w-[16vh] lg:h-[16vh] md:w-[10vw] md:h-[10vw] bg-[url(pro.jpg)] bg-cover bg-center"></div>
         <h1 class="text-[white] mt-[3vh] tracking-wider text-[3vh]" style="">HIMANSHU</h1>
         <a href="https://www.instagram.com/code__with_himanshu/"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[3vh] flex justify-center items-center text-[2vh]">
             <i class="ri-instagram-fill flex justify-end w-[30%] text-[3vh]"></i>
