--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
     <title>Pro link tree</title>
 </head>
-<body class="bg-[url(codingbg2.jpg)] bg-no-repeat bg-[length:100vw_100vh] flex justify-center items-center h-screen scroll-smooth bg-cover bg-center">
+<body class="bg-[url(techbg.jpg)] bg-no-repeat bg-[length:100vw_100vh] flex justify-center items-center h-screen scroll-smooth bg-cover bg-center">
     <div class="absolute top-0 left-0 w-[100vw] h-[100vh] bg-[black] z-10 flex justify-center items-center flex-col" id="flash">
         <i class="ri-loader-3-line text-[white] text-[10vh]" id="load"></i>
         <h3 class="text-[white] tracking-wider text-[3vh]" style="font-family:'Luckiest Guy', sans-serif">Not loading...</h3>
