--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
     <title>Pro link tree</title>
 </head>
-<body class="bg-[url(techbg.jpg)] bg-no-repeat bg-[length:100vw_100vh] flex justify-center items-center h-screen scroll-smooth bg-cover bg-center">
+<body class=" bg-no-repeat bg-[length:100vw_100vh] flex justify-center items-center h-screen scroll-smooth bg-cover bg-center bg-gradient-to-br from-[#3494e6] to-[#ec6ead]">
     <div class="absolute top-0 left-0 w-[100vw] h-[100vh] bg-[black] z-10 flex justify-center items-center flex-col" id="flash">
         <i class="ri-loader-3-line text-[white] text-[10vh]" id="load"></i>
         <h3 class="text-[white] tracking-wider text-[3vh]" style="font-family:'Luckiest Guy', sans-serif">Loading...</h3>
@@ -40,23 +40,23 @@
     <div class="w-[80vw] p-[7vh] bg-white/15 shadow-xl backdrop-blur-xl rounded-lg flex justify-between items-center flex-col lg:w-[40vw] lg:h-[95%] md:h-[90%] ">
         <div class="rounded-full h-[20vw] w-[20vw] lg:w-[16vh] lg:h-[16vh] md:w-[10vw] md:h-[10vw] bg-[url(pro.jpg)] bg-cover bg-center"></div>
         <h1 class="text-[white] mt-[3vh] tracking-wider text-[3vh]" style="">HIMANSHU</h1>
-        <a href="https://www.instagram.com/code__with_himanshu/"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[3vh] flex justify-center items-center text-[2vh] hover:bg-[#00a5c5] hover:text-[white]" class="linkbox" style="transition:all 0.5s ease;">
+        <a href="https://www.instagram.com/code__with_himanshu/"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[2.3vh] flex justify-center items-center text-[2vh] hover:bg-[#ffffff] hover:text-[black]" class="linkbox" style="transition:all 0.5s ease;">
             <i class="ri-instagram-fill flex justify-end w-[30%] text-[3vh]"></i>
             <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Instagram</h3>
             </div></a>
-        <a href="https://www.facebook.com/profile.php?id=100093116797094"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[3vh] flex justify-center items-center text-[2vh] hover:bg-[#00a5c5] hover:text-[white]" class="linkbox" style="transition:all 0.5s ease;">
+        <a href="https://www.facebook.com/profile.php?id=100093116797094"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[2.3vh] flex justify-center items-center text-[2vh] hover:bg-[#ffffff] hover:text-[black]" class="linkbox" style="transition:all 0.5s ease;">
             <i class="ri-facebook-fill flex justify-end w-[30%] text-[3vh]"></i>
             <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Facebook</h3>
         </div></a>
-        <a href="https://t.me/User_not_found110"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[3vh] flex justify-center items-center text-[2vh] hover:bg-[#00a5c5] hover:text-[white]" class="linkbox" style="transition:all 0.5s ease;">
+        <a href="https://t.me/User_not_found110"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[2.3vh] flex justify-center items-center text-[2vh] hover:bg-[#ffffff] hover:text-[black]" class="linkbox" style="transition:all 0.5s ease;">
             <i class="ri-telegram-fill flex justify-end w-[30%] text-[3vh]"></i>
             <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Telegram</h3>
         </div></a>
-        <a href="https://wa.link/civ7gr"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[3vh] flex justify-center items-center text-[2vh] hover:bg-[#00a5c5] hover:text-[white]" class="linkbox" style="transition:all 0.5s ease;">
+        <a href="https://wa.link/civ7gr"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[2.3vh] flex justify-center items-center text-[2vh] hover:bg-[#ffffff] hover:text-[black]" class="linkbox" style="transition:all 0.5s ease;">
             <i class="ri-whatsapp-fill flex justify-end w-[30%] text-[3vh]"></i>
             <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Whatsapp</h3>
         </div></a>
-        <a href="https://discordapp.com/users/himanshu_1101"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[3vh] flex justify-center items-center text-[2vh] hover:bg-[#00a5c5] hover:text-[white]" class="linkbox" style="transition:all 0.5s ease;">
+        <a href="https://discordapp.com/users/himanshu_1101"><div class="w-[30vh] h-[7vh] rounded-lg bg-white/15 backdrop-blur-lg mt-[2.3vh] flex justify-center items-center text-[2vh] hover:bg-[#ffffff] hover:text-[black]" class="linkbox" style="transition:all 0.5s ease;">
             <i class="ri-discord-fill flex justify-end w-[30%] text-[3vh]"></i>
             <h3 class="w-[70%] flex justify-start tracking-wider font-light pl-[5vw] lg:pl-[2vw] md:pl-[2vw]">Discord</h3>
         </div></a>
